--- a/traning/user/rpc/etc/user.yaml
+++ b/traning/user/rpc/etc/user.yaml
@@ -2,5 +2,13 @@ Name: user.rpc
 ListenOn: 0.0.0.0:8080
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+    - 127.0.0.1:2379
   Key: user.rpc
+
+Mysql:
+  DataSource: root:123456@tcp(172.16.89.133:3306)/user?charset=utf8mb4
+
+Cache:
+  - Host: 172.16.89.133:6379
+    Type: node
+    Pass:
