Refactor user API and RPC structure; update Dockerfile and configuration paths

--- a/traning/user/Dockerfile
+++ b/traning/user/Dockerfile
@@ -1,13 +1,28 @@
 FROM alpine
 
-RUN mkdir /go && cd /go \
-  && wget https://go.dev/dl/go1.23.1.linux-amd64.tar.gz \
-  && tar -C /usr/local -zxf go1.23.1.linux-amd64.tar.gz \
-  && rm -rf /go/go1.23.1.linux-amd64.tar.gz \
-  && mkdir /lib64 \
-  && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
+# RUN mkdir /go && cd /go \
+#   && wget https://go.dev/dl/go1.23.1.linux-amd64.tar.gz \
+#   && tar -C /usr/local -zxf go1.23.1.linux-amd64.tar.gz \
+#   && rm -rf /go/go1.23.1.linux-amd64.tar.gz \
+#   && mkdir /lib64 \
+#   && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
 
-ENV GOPATH=/go
-ENV PATH=/usr/local/go/bin:$GOPATH/bin:$PATH
+# ENV GOPATH=/go
+# ENV PATH=/usr/local/go/bin:$GOPATH/bin:$PATH
 
-CMD ["ping", "www.baidu.com"]
+# CMD ["ping", "www.baidu.com"]
+
+
+# GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bin/user-api ./api/user.go
+
+RUN mkdir /user
+
+COPY bin/user-api /user
+
+COPY api/etc/user.yaml /user
+
+RUN chmod +x /user/user-api
+
+WORKDIR /user
+
+ENTRYPOINT ["./user-api", "-f", "user.yaml"]
