feat: update Dockerfiles and configuration for etcd and RPC services; change etcd host IP and improve formatting

--- a/traning/user/Dockerfile_etcd
+++ b/traning/user/Dockerfile_etcd
@@ -7,5 +7,6 @@ ENV ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
 ENV ETCD_NAME=etcd
 
 
-# docker network create user
 # docker run -d -p 2379:2379 -p 2380:2380 --net user --name user-etcd etcd
+
+# docker build -t etcd -f ./Dockerfile_etcd .
