feat: add social and user RPC configurations; implement group and friend management logic and handlers

--- a/easy-chat/apps/social/api/etc/dev/social.yaml
+++ b/easy-chat/apps/social/api/etc/dev/social.yaml
@@ -1,6 +1,12 @@
-Name: user
+Name: social
 Host: 0.0.0.0
-Port: 8888
+Port: 8881
+
+SocialRpc:
+  Etcd:
+    Hosts:
+      - 172.20.209.226:3379
+    Key: social.rpc
 
 UserRpc:
   Etcd:
@@ -11,4 +17,3 @@ UserRpc:
 
 JwtAuth:
   AccessSecret: ali233.com
-  AccessExpire: 86400
