feat: implement chat functionality with MongoDB integration; add conversation handling and message logging

--- a/easy-chat/apps/im/ws/etc/dev/im.yaml
+++ b/easy-chat/apps/im/ws/etc/dev/im.yaml
@@ -3,3 +3,7 @@ ListenOn: 0.0.0.0:10090
 
 JwtAuth:
   AccessSecret: ali233.com
+
+Mongo:
+  Url: "mongodb://root:easy-chat@172.16.89.133:47017"
+  Db: easy-chat
