--- a/easy-chat/docker-compose.yaml
+++ b/easy-chat/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: bitnami/etcd
     container_name: etcd
     ports:
-      - "3379:2379"
+      - '3379:2379'
       - '3380:2380'
     environment:
       - ETCD_ENABLE_V2=true
@@ -47,6 +47,20 @@ services:
     restart: always
     networks:
       - easy-chat
+  mongo:
+    image: mongo:4.0
+    container_name: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: easy-chat
+    ports:
+      - 47017:27017
+    volumes:
+      - ./components/mongo/data:/data/db
+      - /etc/localtime:/etc/localtime
+    restart: always
+    networks:
+      easy-chat:
 
 networks:
   easy-chat:
