--- a/easy-chat/apps/im/ws/etc/dev/im.yaml
+++ b/easy-chat/apps/im/ws/etc/dev/im.yaml
@@ -7,3 +7,8 @@ JwtAuth:
 Mongo:
   Url: "mongodb://root:easy-chat@172.20.209.226:47017"
   Db: easy-chat
+
+MsgChatTransfer:
+  Topic: msgChatTransfer
+  Addrs:
+    - 172.20.209.226:9092
