feat: add concurrency configuration and implement SocialRpc integration; enhance message handling in various components

--- a/easy-chat/apps/social/api/etc/dev/social.yaml
+++ b/easy-chat/apps/social/api/etc/dev/social.yaml
@@ -11,9 +11,14 @@ SocialRpc:
 UserRpc:
   Etcd:
     Hosts:
-      # need ip address
       - 172.20.209.226:3379
     Key: user.rpc
+
+ImRpc:
+  Etcd:
+    Hosts:
+      - 172.20.209.226:3379
+    Key: im.rpc
 
 JwtAuth:
   AccessSecret: ali233.com
