feat: update docker-compose configuration; add APISIX and APISIX Dashboard services with necessary settings

--- a/easy-chat/docker-compose.yaml
+++ b/easy-chat/docker-compose.yaml
@@ -60,7 +60,7 @@ services:
       - /etc/localtime:/etc/localtime
     restart: always
     networks:
-      easy-chat:
+      - easy-chat
 
   zookeeper:
     image: wurstmeister/zookeeper
@@ -73,7 +73,7 @@ services:
       TZ: Asia/Shanghai
     restart: always
     networks:
-      easy-chat:
+      - easy-chat
 
   kafka:
     image: wurstmeister/kafka
@@ -94,8 +94,39 @@ services:
     depends_on:
       - zookeeper
     networks:
-      easy-chat:
-# docker exec -it kafka kafka-console-producer.sh --broker-list 172.20.209.226:9092 --topic msgChatTransfer
+      - easy-chat
+      
+  apisix-dashboard:
+    image: apache/apisix-dashboard:3.0.1-alpine
+    container_name: apisix-dashboard
+    restart: always
+    depends_on:
+      - etcd
+    volumes:
+      - ./components/apisix-dashboard/conf.yaml:/usr/local/apisix-dashboard/conf/conf.yaml
+    ports:
+      - "9000:9000"
+    networks:
+      - easy-chat
+
+  apisix:
+    image: apache/apisix:3.9.1-debian
+    container_name: apisix
+    restart: always
+    depends_on:
+      - etcd
+      - apisix-dashboard
+    volumes:
+      - ./components/apisix/config.yaml:/usr/local/apisix/conf/config.yaml
+      - ./components/apisix/logs:/usr/local/apisix/logs
+    ports:
+      - "9180:9180/tcp"
+      - "9080:9080/tcp"
+      - "9091:9091/tcp"
+      - "9443:9443/tcp"
+      - "9093:9092/tcp"
+    networks:
+      - easy-chat
 
 networks:
   easy-chat:
